meego-keyboard (0.6.9~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#257571 - COREWEB: /usr/bin/meego-im-uiserver 'operator== QFont::operator== QFont::resolve QPainter::setFont MImKeyArea::paint'
  * Fixes: NB#257024 - Deleting word when word prediction bubble is up works wrong
  * Fixes: NB#258682 - VKB gets stuck in SymView when enabling Caps Lock

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Tue, 24 May 2011 09:53:50 +0300

meego-keyboard (0.6.8-1) unstable; urgency=low

  * Fixes: NB#255882 - Vkb sign change button clears text entry content
  * Fixes: NB#256970 - VKB magnifier can get stuck on screen.

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Mon, 23 May 2011 12:46:59 +0300

meego-keyboard (0.6.7-1) unstable; urgency=low

  * Fixes: NB#235142 - [TASK] Disable left-right gesture recognition on VKB when only one plugin active 

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Fri, 20 May 2011 09:42:45 +0300

meego-keyboard (0.6.6-1) unstable; urgency=low

  * Fixes: NB#247713 - Keyboard drop shadow is missing
  * Fixes: NB#237241 - When changing language, caps lock remains on (characters appear in upper case)
  * Fixes: NB#253459 - Arabic email and URL layouts need symbol changes.

 -- Csaba Kertesz <csaba.kertesz@vincit.fi>  Thu, 19 May 2011 08:55:10 +0200

meego-keyboard (0.6.5-1) unstable; urgency=low

  * Fixes: NB#248730
  * Fixes: NB#254995 - Word tracker font barely readably
  * Fixes: Accented character is getting inputted into the text field when tapped on any of the keys that lies below the accented character list.
  * Fixes: NB#256057 - Multitouch behaviour is broken in main and symbol views
  * Fixes: Stuck backspace when extended keys pop up
  * Fixes: NB#226861 - VKB layout is changing to lower-case when switched between main view and sym view.
  * Fixes: latched shift when extended key area is shown
  * Fixes: inconsistency between shift key state and level of other keys
