@@ -4,6 +4,7 @@ meego-keyboard (0.6.9~1) unstable; urgency=low
   * Fixes: NB#257571 - COREWEB: /usr/bin/meego-im-uiserver 'operator== QFont::operator== QFont::resolve QPainter::setFont MImKeyArea::paint'
   * Fixes: NB#257024 - Deleting word when word prediction bubble is up works wrong
   * Fixes: NB#258682 - VKB gets stuck in SymView when enabling Caps Lock
+  * Fixes: NB#246498 - [TASK] Input; Converting to traditional/simplified Chinese function is needed for Chinese input.
 
  -- Ning Chi <ext-chi.2.ning@nokia.com>  Tue, 24 May 2011 09:53:50 +0300
 
